[project]
name = "torch_spsolve"
version = "1.0"
authors = [
  { name="Thomas Grandits", email="tomdev@gmx.net" },
]
description = "A python package "
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project.urls]
Homepage = "https://github.com/thomgrand/torch_spsolve"