[options]
package_dir=
    =src
packages=find:
python_requires = >=3.9


[options.packages.find]
where=src

[options.extras_require]
gpu =
    cupy>=13.0
docs = 
    sphinx
    pydata_sphinx_theme

[flake8]
extend-ignore = E203
exclude =
    .git,
    __pycache__,
    docs/,
    tests,
    build,
    dist,
    .github
max-complexity = 10
max-line-length = 127
